platform/ingress/echoserver/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echoserver-https
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`echo.kfirs.com`)
      services:
        - kind: Service
          name: echoserver-echo-server
          namespace: echoserver
          port: http
  tls:
    secretName: echo-kfirs-com-tls
